--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
